--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
     ]
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/material": "^5.16.0",
     "class-transformer": "^0.5.1",
     "emath.js": "file:../emath.js",
     "react": "^18.2.0",
