--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "webpack-dev-server --mode development --output-pathinfo",
     "build": "webpack --mode production",
-    "dev2": "vite dev -d",
+    "dev": "vite dev --mode development",
     "lint": "eslint src/**/*.ts",
     "lint:fix": "eslint --fix src/**/*.ts"
   },
@@ -49,7 +49,9 @@
     "@types/react-dom": "^18.2.18",
     "@typescript-eslint/eslint-plugin": "^7.14.1",
     "@typescript-eslint/parser": "^7.14.1",
+    "@vitejs/plugin-react": "^4.3.1",
     "@vitejs/plugin-react-swc": "^3.7.0",
+    "autoprefixer": "^10.4.19",
     "copy-webpack-plugin": "^12.0.1",
     "css-loader": "^7.1.1",
     "css-minimizer-webpack-plugin": "^6.0.0",
@@ -64,12 +66,14 @@
     "html-replace-webpack-plugin": "^2.6.0",
     "html-webpack-plugin": "^5.5.3",
     "mini-css-extract-plugin": "^2.8.0",
+    "postcss": "^8.4.39",
     "prettier": "^3.0.3",
     "prettier-eslint": "^16.1.1",
     "rollup": "^4.18.1",
     "rollup-plugin-swc": "^0.2.1",
     "style-loader": "^4.0.0",
     "swc-loader": "^0.2.6",
+    "tailwindcss": "^3.4.6",
     "ts-loader": "^9.5.1",
     "typescript": "^5.5.2",
     "vite": "^5.3.3",
